{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 40,
  "lineage": "a0f12c2b-282a-ad09-ffa9-31a037fcf656",
  "resources": [
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "net_eip",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c8cd281ee90d846",
            "arn": "arn:aws:ec2:us-west-2:445830509717:elastic-ip/eipalloc-09c8cd281ee90d846",
            "domain": "vpc",
            "id": "eipalloc-09c8cd281ee90d846",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-252-166-1.us-west-2.compute.amazonaws.com",
            "public_ip": "44.252.166.1",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Created_by": "Avinash",
              "Name": "prod-eip-1"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "prod-eip-1"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffd752e859b3f9af",
            "arn": "arn:aws:ec2:us-west-2:445830509717:elastic-ip/eipalloc-0ffd752e859b3f9af",
            "domain": "vpc",
            "id": "eipalloc-0ffd752e859b3f9af",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-255-245-218.us-west-2.compute.amazonaws.com",
            "public_ip": "44.255.245.218",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Created_by": "Avinash",
              "Name": "prod-eip-2"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "prod-eip-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:internet-gateway/igw-0b849563606918307",
            "id": "igw-0b849563606918307",
            "owner_id": "445830509717",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c8cd281ee90d846",
            "association_id": "eipassoc-067362e769ff4e192",
            "connectivity_type": "public",
            "id": "nat-07fab3e467ad05789",
            "network_interface_id": "eni-0477d58d8bafd6a5b",
            "private_ip": "10.2.1.252",
            "public_ip": "44.252.166.1",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d151ff13728ec90e",
            "tags": {
              "Name": "prod-nat-gw-1"
            },
            "tags_all": {
              "Name": "prod-nat-gw-1"
            }
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffd752e859b3f9af",
            "association_id": "eipassoc-09475fef448cb0d7a",
            "connectivity_type": "public",
            "id": "nat-06fa183b4c6b69029",
            "network_interface_id": "eni-0ff9e13335359a0a6",
            "private_ip": "10.2.2.85",
            "public_ip": "44.255.245.218",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078841ca772de2919",
            "tags": {
              "Name": "prod-nat-gw-2"
            },
            "tags_all": {
              "Name": "prod-nat-gw-2"
            }
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:route-table/rtb-01d2df42e031a1a5f",
            "id": "rtb-01d2df42e031a1a5f",
            "owner_id": "445830509717",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07fab3e467ad05789",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-rt-1"
            },
            "tags_all": {
              "Name": "prod-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:route-table/rtb-0c406779c8af88df1",
            "id": "rtb-0c406779c8af88df1",
            "owner_id": "445830509717",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fa183b4c6b69029",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-rt-2"
            },
            "tags_all": {
              "Name": "prod-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:route-table/rtb-0ac1a117a51f9d4e7",
            "id": "rtb-0ac1a117a51f9d4e7",
            "owner_id": "445830509717",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b849563606918307",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-rt-1"
            },
            "tags_all": {
              "Name": "prod-public-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:route-table/rtb-0ebe7eeab10d4b397",
            "id": "rtb-0ebe7eeab10d4b397",
            "owner_id": "445830509717",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b849563606918307",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-rt-2"
            },
            "tags_all": {
              "Name": "prod-public-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assocaition_pub",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b054841801e9cfc2",
            "region": "us-west-2",
            "route_table_id": "rtb-0ac1a117a51f9d4e7",
            "subnet_id": "subnet-0d151ff13728ec90e"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dee5044d1d11aaa",
            "region": "us-west-2",
            "route_table_id": "rtb-0ebe7eeab10d4b397",
            "subnet_id": "subnet-078841ca772de2919"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associateion_pri",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0969864e7daa1f64f",
            "region": "us-west-2",
            "route_table_id": "rtb-01d2df42e031a1a5f",
            "subnet_id": "subnet-040be23012cbd7aa3"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0298082dab5dbc285",
            "region": "us-west-2",
            "route_table_id": "rtb-0c406779c8af88df1",
            "subnet_id": "subnet-0260f05ac5f226c73"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:subnet/subnet-040be23012cbd7aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040be23012cbd7aa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445830509717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-private-1"
            },
            "tags_all": {
              "Name": "prod-private-1"
            },
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:subnet/subnet-0260f05ac5f226c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0260f05ac5f226c73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445830509717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-private-2"
            },
            "tags_all": {
              "Name": "prod-private-2"
            },
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:subnet/subnet-0d151ff13728ec90e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d151ff13728ec90e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445830509717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-public-1"
            },
            "tags_all": {
              "Name": "prod-public-1"
            },
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:subnet/subnet-078841ca772de2919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078841ca772de2919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445830509717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-public-2"
            },
            "tags_all": {
              "Name": "prod-public-2"
            },
            "vpc_id": "vpc-059f5765ac50e62a4"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445830509717:vpc/vpc-059f5765ac50e62a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-027bcb12133595a01",
            "default_route_table_id": "rtb-036e80da761e5b472",
            "default_security_group_id": "sg-088b0d97246872dec",
            "dhcp_options_id": "dopt-04232b29e36d361b1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059f5765ac50e62a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036e80da761e5b472",
            "owner_id": "445830509717",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "module.tgw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:445830509717:transit-gateway/tgw-0d389b13bcbfe51f9",
            "association_default_route_table_id": "tgw-rtb-028633071b86d2e4c",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "enableling conectivty between two vpc",
            "dns_support": "enable",
            "id": "tgw-0d389b13bcbfe51f9",
            "multicast_support": "disable",
            "owner_id": "445830509717",
            "propagation_default_route_table_id": "tgw-rtb-028633071b86d2e4c",
            "region": "us-west-2",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "prod-tgw"
            },
            "tags_all": {
              "Name": "prod-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-local-attach",
      "provider": "module.tgw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-west-2:445830509717:transit-gateway-attachment/tgw-attach-0c7da7b2b53ed1405",
            "dns_support": "enable",
            "id": "tgw-attach-0c7da7b2b53ed1405",
            "ipv6_support": "disable",
            "region": "us-west-2",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0260f05ac5f226c73",
              "subnet-040be23012cbd7aa3"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0d389b13bcbfe51f9",
            "vpc_id": "vpc-059f5765ac50e62a4",
            "vpc_owner_id": "445830509717"
          },
          "dependencies": [
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone",
            "module.tgw.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    }
  ]
}